2008-08-06  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/wizard.py:
	Remove some internal validation checks which are no longer valid,
	which makes the wizard behave properly even when you do extensive
	back/forward:ing.
	Fixes #1048.

2008-08-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/documentation.py:
	  Add a method to annotate a message with information on how to
	  install a Python module, linking to the manual.
	* flumotion/component/consumers/disker/disker.py:
	  Use it.
	* po/POTFILES.in:
	  Add documentation.py for translation.
	* po/nl.po:
	  Translate these strings in Dutch so I can test.

2008-08-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/consumptionsteps.py
	(ConsumptionStep.haveHTTP): New method
	* flumotion/wizard/scenarios.py (LiveScenario.save):
	Only set porters if we're adding a http stream.
	Fixes #1107.

2008-08-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/fileselector.py:
	Add a getDirectory method and use it from
	the getFilename method. This will have

	* flumotion/wizard/diskersteps.py:
	Move the registerVFSJelly from here to the fileselector.

	* data/glade/disker-wizard.glade:
	* flumotion/wizard/ondemandstep.py:
	Use the file selector for the disker.
	Fixes #1054.

2008-08-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/pep8.py (added):
	* misc/pep8.py (deleted):
	* Makefile.am:
	* common/Makefile.am:
	  Used in other projects, so should go in common.
	* common/common.mk:
	  Don't check built .py files, check their .in counterparts in srcdir.

2008-08-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/configure/installed.py.in:
	Use variables everywhere, to avoid using more than 79 characters
	when building in buildbot.

2008-08-05  Johan Dahlin  <johan@flumotion.com>

	* Makefile.am:
	dist misc/pep8.py

2008-08-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/diskersteps.py:
	Capitalize, reorder
