@@ -21,11 +21,15 @@
 
 """assistant used to add new streamer format"""
 
+import gettext
+
 from flumotion.wizard.configurationwizard import ConfigurationWizard
 from flumotion.wizard.consumptionsteps import ConsumptionStep
 from flumotion.wizard.conversionsteps import ConversionStep
 from flumotion.wizard.scenarios import LiveScenario, SummaryStep
 from flumotion.wizard.productionsteps import SelectProducersStep
+
+_ = gettext.gettext
 
 
 class AddFormatWizard(ConfigurationWizard):
@@ -34,6 +38,7 @@ class AddFormatWizard(ConfigurationWizard):
         self._selectProducerStep = None
         ConfigurationWizard.__init__(self, parent)
         self.setScenario(LiveScenario(self))
+        self.window.set_title(_("Flumotion: Adding a new encoding format"))
 
     # ConfigurationWizard
 
